# metis

./: .gitignore  CMakeLists.txt  CMakePresets.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.spack/metis-default/: spack.yaml
cmake/: MetisConfig.cmake.in
include/: CMakeLists.txt  metis.h.in
libmetis/: CMakeLists.txt
programs/: CMakeLists.txt
spack/metis-default/: spack.yaml
